--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   </header>
 
   <div id="content">
-
+  <hr>
+    <center><h3>Акции</h3></center>
+  <hr>
 <div id="Promotions">
   <div class="PromotionsItem">
       <img class="imageLeft" src="images/promotions/promotion1.jpg">
@@ -40,35 +42,43 @@
       <button>Показать еще</button><br>
     </div><br><br><br>
   </div>
+  <hr>
+    <center><h3>Поиск билетов</h3></center>
+  <hr>
+  <div id="Serch">
+    <form method="post">
+        <table>
+          <tr>
+            <td><label>Откуда</label></td>
+            <td><input type="text"></td>
+          </tr>
+          <tr>
+            <td><label>Куда</label></td>
+            <td><input type="text"></td>
+          </tr>
+          <tr>
+            <td><label>Туда</label></td>
+            <td><input type="date"></td>
+          </tr>
+          <tr>
+            <td><label>Обратно</label></td>
+            <td><input type="date"></td>
+          </tr>
+          <tr>
+            <td><label>Количество пассажиров</label></td>
+            <td><input type="text"></td>
+          </tr>
+          <tr>
+            <td colspan="2" style="text-align: center"><input id="SerchBytton" type="submit" value="Найти"></td>
+        </tr>
+      </table>
+    </form>
+  </div>
+  <hr>
+    <center><h3></h3></center>
+  <hr>
 </div>
 
-
-<!--       <div class="productRow">
-        <article class="productInfo">
-          <div><img src="images/promotions/promotion1.jpg"></div>
-          <p class="price">Returning and Changing Your Tickets</p>
-          <p class="productContent">The pandemic has changed many travelers’ plans, but we know that it will not last forever. Once all of this is over, we will continue exploring this world the way we used to. Special rules that have been developed for this challenging situation will help you cancel your trip or postpone it until later.</p>
-          <input type="button" name="button" value="Еще" class="buyButton">
-        </article>
-        <article class="productInfo">
-          <div><img src="images/promotions/promotion2.jpg"></div>
-          <p class="price">Best offers</p>
-          <p class="productContent">To see again the streets that witnessed so much. To hug your beloved ones and look back to see what you’ve come through. And to think of new dreams that will be so special!</p>
-          <input type="button" name="button" value="Еще" class="buyButton">
-        </article>
-        <article class="productInfo">
-          <div><img src="images/promotions/promotion3.jpg"></div>
-          <p class="price">See you more often</p>
-          <p class="productContent">Since the beginning of January, we have been expanding the geography of flights in Russia so that you can see your loved ones more often. Choose our company to fly to where you are always expected.</p>
-          <input type="button" name="button" value="Еще" class="buyButton">
-        </article>
-        <article class="productInfo">
-          <div><img src="images/promotions/promotion4.jpg"></div>
-          <p class="price">Everything is on again</p>
-          <p class="productContent">SFrom August 10, we will resume flights to Turkey. Flights from Moscow to Antalya will be operated twice a day daily, and flights on the Moscow-Dalaman route will be operated three to seven times a week.</p>
-          <input type="button" name="button" value="Еще" class="buyButton">
-        </article>
-      </div> -->
   </div>
 
 
