--- a/login.html
+++ b/login.html
@@ -16,7 +16,6 @@
   </header>
 
   <div id="content">
-
           <div id="login">
           <p class="price">Авторизация</p>
           <form method="post">
@@ -30,7 +29,7 @@
             <td><input id="passwordField" type="password" name="password"></td>
             </tr>
             <tr>
-            <td colspan="2" style="text-align: center"><input type="submit" value="Войти"></td>
+            <td colspan="2" style="text-align: center"><input id="SerchBytton" type="submit" value="Войти"></td>
         </tr>
         </table>
         </form>
