--- a/register.html
+++ b/register.html
@@ -16,72 +16,40 @@
   </header>
 
   <div id="content">
-
-    <section class="sidebar">
-      <h2>Поиск билетов</h2>
-      <div id="menubar">
-        <nav class="menu">
-          <h2>Откуда</h2>
-          <hr>
-            <li><input  type="search" name=""></li>
-        </nav>
-        <nav class="menu">
-          <h2>Куда</h2>
-          <hr>
-            <li><input type="search" name=""></li>
-        </nav>
-        <nav class="menu">
-          <h2>Туда</h2>
-          <hr>
-            <li><input type="date" name=""></li>
-        </nav>
-        <nav class="menu">
-          <h2>Обратно</h2>
-          <hr>
-            <li><input type="date" name=""></li>
-        </nav>
-        <nav class="menu">
-          <h2>Откуда</h2>
-          <hr>
-            <li><input  type="search" name=""></li>
-        </nav>
-        <nav class="menu">
-          <h2>Количество пассажиров</h2>
-          <hr>
-            <li><input  type="search" name=""></li>
-        </nav>
-        <nav class="menu">
-          <hr>
-          <center><button>Найти билеты</button></center>
-          <hr>
-        </nav>
-      </div>
-    </section>
-
-    <section class="mainContent">
-      <div class="productRow">
-        <article class="productInfo">
-          <p class="price">Регитсрация</p>
-          <div class="login_content">
-          <form id="login">
-            <label>Имя: </label>
-            <input type="text"> <br>
-            <label>Фамилия: </label>
-            <input type="text"> <br>
-            <label>Номер документа: </label>
-            <input type="text"> <br>
-            <label>Телефон: </label>
-            <input type="text"> <br>
-            <label>Пароль: </label>
-            <input type="text"> <br>
-            <label>Повтарите пароль: </label>
-            <input type="text"> <br>
-            <button>Зарегистрироваться</button>
-          </form>
+      <div id="login">
+          <p class="price">Регистрация</p>
+          <form>
+          <table>
+          <tr>
+            <td><label>Имя:</label></td>
+            <td><input></td>
+            </tr>
+            <tr>
+            <td><label>Фамилиия:</label></td>
+            <td><input></td>
+            </tr>
+            <tr>
+            <td><label>Номер документа:</label></td>
+            <td><input></td>
+            </tr>
+            <tr>
+            <td><label>Телефон:</label></td>
+            <td><input></td>
+            </tr>
+            <tr>
+            <td><label>Пароль:</label></td>
+            <td><input></td>
+            </tr>
+            <tr>
+            <td><label>Повтор пароля:</label></td>
+            <td><input></td>
+            </tr>
+            <tr>
+            <td colspan="2" style="text-align: center"><input id="SerchBytton" type="submit" value="Регистрация"></td>
+        </tr>
+        </table>
+        </form>
         </div>
-        </article>
-      </div>
-    </section>
   </div>
 
 
