--- a/register.html
+++ b/register.html
@@ -1,22 +1,26 @@
 <!doctype html>
-<html>
-<div id="header">
-<meta charset="utf-8">
-<title>Регитсраиця</title>
+<html lang="en-US">
+<head>
+<title>Регистрация</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
-</div>
-
+</head>
 <body>
-<div id="mainWrapper">
-  <header> 
-    <div id="logo"><img src="logo.png" width="250px"></div>
-    <div id="headerLinks">
-      <a href="#">Регистрация</a>
-    </div>
+<!-- Main Container -->
+<div class="container"> 
+  <!-- Navigation -->
+  <header><a href="">
+    <img src="logo.png" alt="" width="200">
+    </a>
+    <nav>
+      <ul>
+    <li><a href="#">Поиск</a></li>
+    <li><a href="#">Акции</a></li>
+    <li><a href="#">Регистрация на рейс</a></li>
+    <li><a href="#">Личный кабинет</a></li>
+      </ul>
+    </nav>
   </header>
-
-  <div id="content">
-      <div id="login">
+          <center><div id="Register">
           <p class="price">Регистрация</p>
           <form>
           <table>
@@ -49,21 +53,19 @@
         </tr>
         </table>
         </form>
-        </div>
-  </div>
+        </div></center>
 
-
-    <div id="footer"> 
-    <div>
-      <p>Наш Телефон “8 (800) 100-10-10”</p>
-    </div>
-    <form>
-      <label>Подписка на получение новостей об акциях</label> <br>
-      <label>Email:</label>
-      <input type="text">
-      <button>Отправить</button>
-    </form>
+  <section class="footer_banner" id="contact">
+    <p class="hero_header">Наш телефон “8 (800) 100-10-10”</p><br>
+   <p class="hero_header"><a class="hero_a" href="">|Home|</a>
+    <a class="hero_a" href="">|Login|</a>
+    <a class="hero_a" href="">|Sign up|</a>
+    <a class="hero_a" href="">|Contact|</a>
+    <a class="hero_a" href="">|News|</a>
+    <a class="hero_a" href="">|Return|</a>
+    <a class="hero_a" href="">|Feedback|</a></p>
+  </section>
 </div>
-</div>
+<!-- Main Container Ends -->
 </body>
 </html>
