--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <!-- Main Container -->
 <div class="container"> 
   <!-- Navigation -->
-  <header><a href="">
+  <header><a href="index.html">
     <img src="logo.png" alt="" width="200">
     </a>
     <nav>
       <ul>
-		<li><a href="#">Поиск</a></li>
-        <li><a href="#">Акции</a></li>
-        <li><a href="#">Регистрация на рейс</a></li>
-		<li><a href="#">Личный кабинет</a></li>
+		<li><a href="#hero3">Поиск</a></li>
+        <li><a href="#about">Акции</a></li>
+        <li><a href="register.html">Регистрация на рейс</a></li>
+		<li><a href="profile.html">Личный кабинет</a></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +24,7 @@
   <section class="hero" id="hero">
     <h2 class="hero_header">Mordovia <span class="light">AVIA</span></h2>
     <blockquote>
-      <p class="tagline">Крупнейшая частная авиакомпания России с самым современным парком воздушных судов на российском рынке авиаперевозок. Широкая маршрутная сеть позволяет нашим пассажирам путешествовать в 181 город в 26 странах мира.</p>
+      <p class="tagline">новая и энергичная авиакомпания, предоставляющая услуги пассажирских авиаперевозок небольшими малогабаритными самолетами. Главная цель компании - развить связность между городами России путем организации авиасообщений на непостоянной основе по мере накопления запросов на перелет.</p>
     </blockquote>
   </section>
   <section class="hero2" id="hero2">
