--- a/login.html
+++ b/login.html
@@ -8,15 +8,15 @@
 <!-- Main Container -->
 <div class="container"> 
   <!-- Navigation -->
-  <header><a href="">
+  <header><a href="index.html">
     <img src="logo.png" alt="" width="200">
     </a>
     <nav>
       <ul>
-    <li><a href="#">Поиск</a></li>
-    <li><a href="#">Акции</a></li>
-    <li><a href="#">Регистрация на рейс</a></li>
-    <li><a href="#">Личный кабинет</a></li>
+    <li><a href="#hero3">Поиск</a></li>
+        <li><a href="#about">Акции</a></li>
+        <li><a href="register.html">Регистрация на рейс</a></li>
+    <li><a href="profile.html">Личный кабинет</a></li>
       </ul>
     </nav>
   </header>
