--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-US">
+<html>
 <head>
 <title>Mordovia AVIA</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
